# melsec_mc

./: .gitattributes  .gitignore  .sync-trigger  Cargo.toml  README.en.md  README.md  cargo_metadata.json  found_logs.json
.github/: .gitignore
.github/scripts/: sync-run.sh
.github/workflows/: extract-melsec_mc-v0.4.13.yml  force-replace-melsec_mc-main.yml  publish.yml  sync-to-melsec_mc.yml  sync-to-melsec_mc_dryrun.yml  sync-to-melsec_mc_test.yml
docs/: melsec_com.md
filter-repo/: paths-to-remove.txt  replace-strings.txt  run-filter-repo.ps1
melsec_mc/: .sync-trigger  Cargo.toml  cargo_metadata.json  local_head_sync.yml  tmp_decoded_sync3.yml
melsec_mc/.github/scripts/: local-sync-and-merge.ps1  local-sync-test.ps1  sync-create-pr.sh  sync-run.sh
melsec_mc/.github/workflows/: ci.yml  sync-to-melsec_mc.clean.yml
melsec_mc/melsec_mc/src/: lib.rs
target-clean/: .gitignore
