[package]
name = "melsec_mc"
version = "0.4.10"
edition = "2021"
authors = ["tyaro"]
description = "A small Rust library to talk to Mitsubishi PLCs via MC Protocol (Ethernet) - transport layer and helpers"
license = "MIT"
repository = "https://github.com/tyaro/melsec_mc"
readme = "README.md"
documentation = "https://docs.rs/melsec_mc"
homepage = "https://github.com/tyaro/melsec_mc"
keywords = ["melsec", "plc", "mc-protocol", "industrial", "automation", "tokio"]
categories = ["network-programming", "embedded"]
exclude = [
	"target/**",
	"**/*.rs.bk",
	"logs/**",
	"sled_db/**",
	"ci_artifacts/**",
	"release_artifacts/**",
	".github/**",
	"scripts/**",
	"examples/archived/**",
]


[dependencies]
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time", "sync"] }
# bytes crate appeared to be unused in src/ (checked by grep). Commenting out to verify
# whether the dependency is required transitively. If build/test fails, revert this change.
# bytes = "1"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"
once_cell = "1.21.3"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
# structured logging for library and tests
tracing = "0.1"
# optional: a subscriber is used in runtime crates/tests
# serde_json used for poller metadata
serde_json = "1.0.145"
# async-trait removed: replaced dynamic dispatch with enum-based transport abstraction
 
[build-dependencies]
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
# Note: removed local path dev-dependency on melsec_mc_mock to allow crates.io publish from
# the per-crate repository CI. Tests that require the mock run inside the monorepo.

[lib]
crate-type = ["cdylib", "rlib"]

# Workspace moved to repository root Cargo.toml. Removed nested workspace declaration to
# allow running `cargo` from the repository root (d:/develop/melsec_com).
